# dmcore

./: CMakeLists.txt  README.md  check_coords.py  dmcore.kdev4  test.r
dmcore/: CMakeLists.txt  dmcore.cpp
dmcore-bin/: CMakeLists.txt  main.cpp
dmcore/include/: dmcore.hpp
include/: dmcore.hpp
src/: dmcore.cpp
